2003-03-07  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Link to the shared games library.

	* tetris.cpp: Add a GConf sanity check.

2003-02-19  Alex Duggan  <aldug@astrolinux.com>

	* tetris.cpp: use a close button in the preferences dialog
	instead of an ok button.  Fixes #103835

2002-12-17  Ross Burton  <ross@burtonini.com>

	* Makefile.am (schema_in_files): Fix the GConf schema path.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (SUBDIRS): Put the source of the schemas in the
	dist, not the generated files.

2002-11-22  Tim Musson  <trmusson@ihug.co.nz>

	* tetris.cpp: (gameAbout), (showScores): No more multiple About
	dialogs, and Score dialog is now modal. (#97320)
	(gameProperties): gtk_window_present if Prefs dialog exists.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnometris.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-11  Ross Burton  <ross@burtonini.com>

	* pix/gnome-gtetris.png: New icon contributed by Timothy Musson.

2002-06-02  Ross Burton  <ross@burtonini.com>

	* tetris.cpp: Make the about dialog a transient for the main
	window. Also don't position the Preferences window under the
	cursor explicitly. If the user wants that, they can tell the WM to
	do it.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* tetris.cpp: disable help menu item

2002-05-31  Bastien Nocera  <hadess@hadess.net>

	* tetris.cpp: /me silently corrects a 1 letter typo and
	(Closes: #82251)

2002-05-14  Abel Cheung  <maddog@linux.org.hk>

	* tetris.cpp (Tetris::gameAbout): Added translator credits.

2002-05-10  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: nothing interesting
	* tetris.cpp: add an icon to the about box, make 'P' be the pause
	button, make 'Space' drop the block at the bottom (like in all the
	other implementations) (Closes: #60579)
